--- a/static/sass/Profile/Modals.sass
+++ b/static/sass/Profile/Modals.sass
@@ -114,7 +114,6 @@
 
 				.timePicker-slider--wrapper
 					bottom: 0rem
-					height: 2.8rem
 
 		.cancel-button
 			display: block
