--- a/static/sass/UI/TimePicker.sass
+++ b/static/sass/UI/TimePicker.sass
@@ -1,5 +1,6 @@
 .time-picker-wrapper-comp
 	position: relative
+	height: 100%
 
 	.noUi-target
 		z-index: 3
